# wuxianhuabu

./: .gitignore  ARCHITECTURE.md  PRODUCT_ROADMAP.md  index.html  local-ai-server.cjs  mock-image-api.cjs  package-lock.json  package.json  vite.config.js
docs/: README.md  new-project-workspace.json  optimization-checklist.md
scripts/: bundle-budget-check.mjs  bundle-size-report.mjs  desktop-release-smoke.mjs  gemini-web-worker.cjs  release-safety-check.mjs  run-studio-smoke-preview.mjs  studio-smoke.mjs  tauri-build-check.mjs
src/: api-workspace-library.js  backend-service-helpers.js  basic-nodes.jsx  board.jsx  canvas-heavy-nodes.jsx  commercial-template-library.js  debug-trace-helpers.js  delivery-workflow-helpers.js  director-canvas-helpers.js  file-name-helpers.js  heavy-nodes.jsx  history-helpers.js  lazy-panels.jsx  main.jsx  management-panels.jsx  minimap-panel.jsx  node-action-helpers.js  node-link-helpers.js  novel-factory-default-templates.js  preset-center-helpers.js  production-assist-helpers.js  project-file-helpers.js  project-media-migration-helpers.js  project-report-helpers.js  project-resource-helpers.js  project-search-helpers.js  project-shell-state-helpers.js  project-state-helpers.js  project-studio.jsx  project-timeline-helpers.js  prompt-factory-state-helpers.js  queue-state-helpers.js  review-action-helpers.js  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_clients.rs  comfy.rs  config.rs  file_ops.rs  gemini_web.rs  lib.rs  main.rs  media_utils.rs  render_timeline.rs  sqlite_index.rs
(+310 files in other folders)
