[package]
name = "wuxianhuabu"
version = "0.1.0"
description = "无限画布 AI 漫剧工具"
authors = ["wuxianhuabu"]
edition = "2021"

[lib]
name = "wuxianhuabu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
arboard = "3"
mime_guess = "2"
tokio = { version = "1", features = ["time", "rt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "2"
